java-app/petclinic-service-lb-delegated-DNS.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-lb-delegated-dns
  #namespace: staging
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http  
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: petclinic
  type: LoadBalancer
