java-app/petclinic-service-lb-fw.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-lb-fw-svc
  #namespace: staging
  annotations:
        service.beta.kubernetes.io/azure-dns-label-name: $DNS_LABEL
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http  
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: petclinic
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 172.16.1.0/24
  - ${LB_FW_IP_RANGE}
